<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/appBar"
        layout="@layout/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/universitiesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/universities"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facultiesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faculties"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/departmentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/departments"/>

</LinearLayout>