<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/facultyNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alias"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/faculties"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/facultyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/facultyNameText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/facultySpecialization"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/faculties"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/facultySpecText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spec"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facultyNameText"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/faculties"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/facultySpecialization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/facultySpecText"
        app:layout_constraintTop_toBottomOf="@id/facultyName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/faculties"/>

</androidx.constraintlayout.widget.ConstraintLayout>