<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/departmentNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alias"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/universities"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/departmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/departmentNameText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/departmentSpecialization"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/universities"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/departmentSpecText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spec"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/departmentNameText"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/universities"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/departmentSpecialization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/departmentSpecText"
        app:layout_constraintTop_toBottomOf="@id/departmentName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/universities"/>


</androidx.constraintlayout.widget.ConstraintLayout>