<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:background="@drawable/shape_cell_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employeeNameSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/name_surname"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/employeeNameSurname"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/universities"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employeeSecondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/employeeName"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/universities"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employeeRoleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employeeNameSurname"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/role"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employeeRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/employeeRoleText"
        app:layout_constraintTop_toBottomOf="@+id/employeeName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="@string/universities"/>

</androidx.constraintlayout.widget.ConstraintLayout>